Fix gaps between social media icons

--- a/css/components/socialbar.css
+++ b/css/components/socialbar.css
@@ -22,6 +22,14 @@
   margin-right: 10px;
 }
 
+.social-icon-gap-x {
+  margin-right: 7px !important;
+}
+
+.social-icon-gap-threads {
+  margin-right: 8.5px !important;
+}
+
 .social-icon {
   display: inline-flex;
   align-items: center;
